; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/file-updater/file-updater/extr_file-updater.c_newer_than_cache.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/file-updater/file-updater/extr_file-updater.c_newer_than_cache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file_update_data = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [5 x i8] c"name\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"version\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*)* @newer_than_cache to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @newer_than_cache(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.file_update_data*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.file_update_data*
  store %struct.file_update_data* %10, %struct.file_update_data** %6, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = call i8* @obs_data_get_string(i32* %11, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  store i8* %12, i8** %7, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = call i64 @obs_data_get_int(i32* %13, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* %8, align 4
  %16 = load %struct.file_update_data*, %struct.file_update_data** %6, align 8
  %17 = getelementptr inbounds %struct.file_update_data, %struct.file_update_data* %16, i32 0, i32 3
  %18 = load i32, i32* %17, align 4
  %19 = load i8*, i8** %7, align 8
  %20 = call i64 @strcmp(i32 %18, i8* %19)
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %22, label %33

22:                                               ; preds = %2
  %23 = load %struct.file_update_data*, %struct.file_update_data** %6, align 8
  %24 = getelementptr inbounds %struct.file_update_data, %struct.file_update_data* %23, i32 0, i32 0
  store i32 1, i32* %24, align 4
  %25 = load %struct.file_update_data*, %struct.file_update_data** %6, align 8
  %26 = getelementptr inbounds %struct.file_update_data, %struct.file_update_data* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* %8, align 4
  %29 = icmp sgt i32 %27, %28
  %30 = zext i1 %29 to i32
  %31 = load %struct.file_update_data*, %struct.file_update_data** %6, align 8
  %32 = getelementptr inbounds %struct.file_update_data, %struct.file_update_data* %31, i32 0, i32 1
  store i32 %30, i32* %32, align 4
  store i32 0, i32* %3, align 4
  br label %34

33:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %34

34:                                               ; preds = %33, %22
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i8* @obs_data_get_string(i32*, i8*) #1

declare dso_local i64 @obs_data_get_int(i32*, i8*) #1

declare dso_local i64 @strcmp(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
